frontend/test/should_pass/deleteInAlternative_e.grg
rule r
{
	-e:Edge->;

	alternative {
		L {
			modify {
				delete(e);
			}
		}
	}
	
	modify {
	}
}
