frontend/test/should_fail/delretypesame_002b_e.grg
rule r{	-e:Edge->;		optional {					modify {			-f:Edge<e>->;		}	}		modify {		delete(e);	}}